<resources>
    <string name="app_name">CTalk</string>
    <string name="appName">Culture Talk</string>
    <string name="welcome">Witaj!</string>
    <string name="emailHint">Email</string>
    <string name="password">Hasło</string>
    <string name="logInButton">Zaloguj</string>
    <string name="register">Rejestruj</string>
    <string name="registration">Rejestracja</string>
    <string name="email">Email:</string>
    <string name="name">Imię i Nazwisko:</string>
    <string name="back">Cofnij</string>
    <string name="confirmPassword">Potwierdź Hasło:</string>
    <string name="contacts">Kontakty</string>
    <string name="messages">Wiadomości</string>
    <string name="settings">Ustawienia</string>
    <string name="events">Wydarzenia</string>
    <string name="noEvents">Brak Wydarzeń</string>
    <string name="noContacts">Brak Kontaktów - Dodaj znajomych w Ustawieniach!</string>
    <string name="noMessages">Brak Wiadomości</string>
    <string name="province">Województwo</string>
    <string name="tags">Tagi</string>
    <string name="preference_tags">TAGS_FILENAME</string>
    <string name="saved_tags">Saved Tags</string>
    <string name="saved_tagIds">Tags IDs</string>
    <string name="choose_your_province">Wybierz województwo, w którym chcesz szukać wydarzeń!</string>
    <string name="preference_province">PROVINCE_FILENAME</string>
    <string name="saved_province">Saved Province</string>
    <string name="addContact">Dodaj Kontakt</string>
    <string name="addingContact">Dodawanie Kontaktów</string>
    <string name="search">Szukaj</string>
    <string name="preference_contacts">CONTACTS_FILENAME</string>
    <string name="saved_contacts">Saved Contacts</string>
    <string name="preference_messages">MESSAGES_FILENAME</string>
    <string name="lastMessageID">Last Message Id</string>
    <string name="lastMessages">lastMessages</string>
    <string name="noMessagesToShow">Brak wiadomości</string>
    <string name="send">Wyślij</string>
</resources>
